# ocaml-sat

./: .gitignore  README  dune-project  ocaml_sat.opam
lib/: Cnf.ml  Cnf.mli  dune
test/: Cnf_test.ml  dune
test/dimacs/: test1.cnf
